# crumpitmanagerAPIs

./: .coverage  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  api.py  clusterInfo.py  config.py  makeGraphs.py  requirements.txt  runInfo.py  runsInfo.py  setup.cfg  swagger.yaml  validateYAML.py
.github/workflows/: test.yaml
app/: clusterInfo.py  config.py  nanoporeSeqOptions.py
app/liveRuns/: runInfo.py  runsInfo.py
app/metadata/: metaDataConnection.py
configs/: config-testing.yaml  config.yaml  schema.yaml
cronScripts/: backupToCSProgress.bash  backupToRescompProgress.bash  clean_list.bash  crontab  crontab20190604  deleteRecentRuns.bash  print_old_runs.py  trickleUpload.py  upload.bash
crumpitmanagerapi/: __init__.py  clusterInfo.py  config.py  nanoporeSeqOptions.py
crumpitmanagerapi/liveRuns/: runsInfo.py
crumpitmanagerapi/metadata/: metaDataConnection.py
data/: barcoder_kits_20200220.txt  barcoder_kits_4.2.2.txt  basecaller_workflows_20200220.txt  basecaller_workflows_4.2.2.txt
graphs/: plot_depth_by_barcode.py
tests/: test_api.py
tests/docker/: crumpit_backup.sql  crumpit_init.sql  crumpit_mongo.Dockerfile  crumpit_sql.Dockerfile  mongo_restore.sh
tests/docker/mongobackup/gridRuns/: gridRuns.bson  gridRuns.metadata.json
