[metadata]
name = crumpitmanagerapis
version = 1.3.0
url = https://gitlab.com/ModernisingMedicalMicrobiology/crumpitmanagerAPIs
maintainer = MMM
maintainer_email = crookscs.it@ndm.ox.ac.uk
description = APIs for CRuMPIT manager website.

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    crumpitmanagerapi